[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycct"
version = "0.1.0"
description = "Python implementation of the Cauchy Combination Test"
readme = "README.md"
authors = [
    {name = "Masahiro Kanai", email = "mkanai@broadinstitute.org"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[project.urls]
"Homepage" = "https://github.com/mkanai/pycct"
"Bug Tracker" = "https://github.com/mkanai/pycct/issues"

[tool.setuptools]
packages = ["pycct"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
